fix(UnitsHealthTab): backport form control overflow fix for firefox
Backport changes that fixed the form control icon overflow issues in Firefox for 1.11

Closes DCOS-40638

--- a/src/styles/components/form-elements/form-group/styles.less
+++ b/src/styles/components/form-elements/form-group/styles.less
@@ -36,6 +36,17 @@
       }
     }
   }
+
+  .health-tab {
+
+    input {
+      min-width: 0;
+    }
+
+    .form-control-group-add-on:last-child {
+      font-size: 0;
+    }
+  }
 }
 
 & when (@form-group-enabled) and (@layout-screen-small-enabled) {
